--- a/calci.css
+++ b/calci.css
@@ -50,7 +50,10 @@ form input.e{
     width:145px;
     color:#33ffd8;
 }
-
+form input.r
+{
+    color:red;
+}
 form input.ac
 {
     color:#33ffd8;
