--- a/calci.css
+++ b/calci.css
@@ -9,7 +9,7 @@
 {
     width:100%;
     height:100vh;
-    background:#617A55;
+    background:#e3f9ff;
     display:flex;
     align-items:center;
     justify-content:center;
