--- a/calci.css
+++ b/calci.css
@@ -54,6 +54,13 @@ form input.r
 {
     color:red;
 }
+body
+{
+    background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQQx_NU8oW_ziIUvesWi_xlmmC-sEA2MHaEvw&usqp=CAU");
+    background-repeat:no-repeat;
+    background-size:100% 100%;
+    background-position:"fixed";
+}
 form input.ac
 {
     color:#33ffd8;
